--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="container mx-auto px-4 py-12">
     <h2 class="text-3xl font-bold mb-6">Sobre Nosotros</h2>
     <p class="text-lg mb-8">
-      Clínicamente: Neuropsicología se dedica a proporcionar servicios integrales a personas de todas las edades. Nuestra misión es mejorar la comprensión del funcionamiento cognitivo.
+      Clínicamente: Neuropsicología se dedica a proporcionar servicios integrales a personas de todas las edades. Nuestra misión es mejorar la comprensión del funcionamiento cognitivo y conductual.
     </p>
   </section>
 
